syntax = "proto3";
package dydxprotocol.subaccounts;

import "gogoproto/gogo.proto";

option go_package = "github.com/dydxprotocol/v4/x/subaccounts/types";

// PerpetualPositions are an accountâ€™s positions of a `Perpetual`.
// Therefore they hold any information needed to trade perpetuals.
message PerpetualPosition {
  // The `Id` of the `Perpetual`.
  uint32 perpetual_id = 1;
  // The size of the position in base quantums.
  bytes quantums = 2 [
    (gogoproto.customtype) =
        "github.com/dydxprotocol/v4/dtypes.SerializableInt",
    (gogoproto.nullable) = false
  ];
  // The funding_index of the `Perpetual` the last time this position was
  // settled.
  bytes funding_index = 3 [
    (gogoproto.customtype) =
        "github.com/dydxprotocol/v4/dtypes.SerializableInt",
    (gogoproto.nullable) = false
  ];
  // The last settled funding payment amount (in quote quantums).
  // Note: a positive value means funding payment was paid out and
  // a negative value means funding payment was received.
  bytes last_funding_payment = 4 [
    (gogoproto.customtype) =
        "github.com/dydxprotocol/v4/dtypes.SerializableInt",
    (gogoproto.nullable) = false
  ];
}
